--- a/trades/templates/registration/signup.html
+++ b/trades/templates/registration/signup.html
@@ -1,10 +1,14 @@
 {% extends 'trades/base.html' %}
 
 {% block content %}
-  <h2>Sign Up</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Sign up</button>
-  </form>
+<div class="d-flex align-items-center justify-content-center" style="min-height: 80vh;">
+  <div class="w-100" style="max-width: 650px;">
+    <h2 class="mb-4 text-center">Sign Up</h2>
+    <form method="post" class="card p-4 shadow-sm border-0">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit" class="btn btn-primary w-100">Sign up</button>
+    </form>
+  </div>
+</div>
 {% endblock %}
