--- a/trades/templates/registration/login.html
+++ b/trades/templates/registration/login.html
@@ -9,6 +9,9 @@
       {{ form.as_p }}
       <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
+     <div class="text-center mt-2">
+  <a href="{% url 'password_reset' %}" class="btn btn-link">Forgot password?</a>
+</div>
   </div>
 </div>
 {% endblock %}
