--- a/trades/templates/registration/password_reset_form.html
+++ b/trades/templates/registration/password_reset_form.html
@@ -1,7 +1,7 @@
 {% extends 'trades/base.html' %}
 {% block content %}
 <h2>Forgot your password?</h2>
-<p>Enter your email address and we'll send you a link to reset your password.</p>
+<p>Enter your emails address and we'll send you a link to reset your password.</p>
 <form method="post">
   {% csrf_token %}
   <div class="mb-3">
