fix: Add favicon

--- a/trades/templates/trades/base.html
+++ b/trades/templates/trades/base.html
@@ -4,6 +4,8 @@
 <html lang="en">
 <head>
   
+<link rel="icon" type="image/x-icon" href="{% static 'trades/favicon.ico' %}">
+
 
   <meta charset="UTF-8">
   <title>TradeTracker</title>
